force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/sugati__Selected_Itinerary_Content_Category__c.object-meta.xml
<CustomObject>
    <label>Selected Content Category</label>
    <nameField>
        <displayFormat>SICC-{0000000000}</displayFormat>
        <label>Itinerary Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Content Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>