force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__ICC_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>