force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__ICC_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Image_ID__c</fullName>
    <label>Image ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>