force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__ICC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Itinerary_Content_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>