force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__ICC_Page_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Page_No__c</fullName>
    <label>Page No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>