force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__SICC_Itinerary_Content_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICC_Itinerary_Content_Category__c</fullName>
    <label>Itinerary Content Category</label>
    <referenceTo>sugati__Itinerary_Content_Category__c</referenceTo>
    <relationshipName>Selected_Itinerary_Content_Categories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>