force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__SICC_message1__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICC_message1__c</fullName>
    <label>Message1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>