force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__SICC_New_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICC_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page</label>
    <type>Checkbox</type>
</CustomField>