force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/fields/sugati__SICC_Show_Label__c.field-meta.xml
<CustomField>
    <fullName>sugati__SICC_Show_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Label?</label>
    <type>Checkbox</type>
</CustomField>