force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/recordTypes/sugati__Categories.recordType-meta.xml
<RecordType>
    <fullName>sugati__Categories</fullName>
    <active>true</active>
    <description>All Categories</description>
    <label>Print</label>
</RecordType>