force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/recordTypes/sugati__Tailored_For_You.recordType-meta.xml
<RecordType>
    <fullName>sugati__Tailored_For_You</fullName>
    <active>true</active>
    <label>Tailored For You</label>
</RecordType>