force-app/main/default/objects/sugati__Selected_Itinerary_Content_Category__c/recordTypes/sugati__What_It_Costs.recordType-meta.xml
<RecordType>
    <fullName>sugati__What_It_Costs</fullName>
    <active>true</active>
    <label>What It Costs</label>
</RecordType>